--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,10 +1,7 @@
 extends config/layout
 
 block vars
-  - const title = 'Title'
+  - const title = 'Шляпа'
 
 block content
-  p.
-    Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Единственное, своего повстречался переписали все ее послушавшись эта пунктуация своих!
-
-  p Далеко-далеко за, словесными горами в стране гласных и согласных живут рыбные тексты.
+  h1 Главный контент
