прижал футер к низу

--- a/src/pug/config/layout.pug
+++ b/src/pug/config/layout.pug
@@ -13,7 +13,7 @@ html(lang="ru")
 
       include ../../modules/header/header.pug
 
-      .content
+      main.content
         block content
 
       include ../../modules/footer/footer.pug
