--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@ html, body { height: 100%; }
 body {
   display: flex;
   flex-direction: column;
+  background-image: url(..img/test.jpg);
 }
 
 .content {
