changed syntax functions

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -4,3 +4,4 @@ block vars
   - const title = 'Главная страница'
 
 block content
+  p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus molestiae nulla, animi non dolore dicta alias laborum illum molestias illo iure possimus ducimus unde in est porro voluptas, eligendi labore.
