--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,15 +21,8 @@ body {
 }
 
 .wrapper {
-  @include wrapper;
+  // @include wrapper;
   background: gray;
-}
-
-p {
-  @include row-flex();
-  @include size-lg(6);
-  @include size-md(8);
-  @include size-xs(12);
 }
 
 @import '../modules/modules';
