--- a/src/modules/header/header.pug
+++ b/src/modules/header/header.pug
@@ -1,3 +1,3 @@
 header.header
   p.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas aliquid voluptates excepturi repellat suscipit illo sit
+    Хедер подключен
