--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,12 +4,22 @@
 @import 'config/fonts';
 @import 'utils/smart-grid';
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  font-size: 62.5%;
+}
 
 body {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  line-height: 1.4;
+  text-rendering: optimizeSpeed;
+}
+
+.wrapper {
+  font-size: 1.6rem;
   display: flex;
   flex-direction: column;
-  background-image: url(..img/test.jpg);
+  @include wrapper;
 }
 
 .content {
@@ -18,11 +28,6 @@ body {
 
 .footer {
   flex: 0 0 auto;
-}
-
-.wrapper {
-  // @include wrapper;
-  background: gray;
 }
 
 @import '../modules/modules';
