add task svgSprite

--- a/src/pug/config/layout.pug
+++ b/src/pug/config/layout.pug
@@ -9,6 +9,9 @@ html(lang="ru")
     block styles
       link(rel="stylesheet", href="css/main.min.css")
   body
+    .visually-hidden
+      //- include sprite svg icons
+      include svg.pug
     .wrapper
 
       //- Header
