--- a/src/pug/config/layout.pug
+++ b/src/pug/config/layout.pug
@@ -6,7 +6,7 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title #{title}
-    block styles
+    block links
       link(rel="stylesheet", href="css/main.min.css")
   body
     .visually-hidden
