--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,4 +3,9 @@ extends config/layout
 block vars
   - const title = 'Главная страница'
 
+block links
+  link(rel="stylesheet", href="css/main.min.css")
+  link(rel="preconnect", href="https://fonts.gstatic.com")
+  link(href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet")
+
 block content
