--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -1,3 +1,23 @@
+html, body {
+  height: 100%;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
+body {
+  font-family: 'PT Sans', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
+  line-height: 1.4;
+  text-rendering: optimizeSpeed;
+}
+
 .visually-hidden:not(:focus):not(:active) {
   position: absolute;
 
@@ -12,4 +32,26 @@
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+
+.wrapper {
+  font-size: 1.6rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.footer {
+  flex: 0 0 auto;
+}
+
+.button {
+  border: none;
+  background-color: transparent;
+  padding: 5px;
+  outline-width: 1px;
 }
