--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,30 +1,10 @@
+@import 'config/function';
 @import 'config/vars';
 @import 'config/base';
 @import 'config/fonts';
 
-html, body {
-  height: 100%;
-  font-size: 62.5%;
-}
 
-body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
-  line-height: 1.4;
-  text-rendering: optimizeSpeed;
-}
 
-.wrapper {
-  font-size: 1.6rem;
-  display: flex;
-  flex-direction: column;
-}
 
-.content {
-  flex: 1 0 auto;
-}
-
-.footer {
-  flex: 0 0 auto;
-}
 
 @import '../modules/modules';
