--- a/src/modules/nav/_nav.scss
+++ b/src/modules/nav/_nav.scss
@@ -1,11 +1,10 @@
 .nav {
-  position: relative;
-  background-color: $blue;
 
   &__button {
     position: absolute;
     top: 12px;
     right: 15px;
+    z-index: 1;
   }
 
   &__icon {
@@ -16,7 +15,9 @@
   }
 
   &__list {
+    position: relative;
     list-style-type: none;
+    background-color: $blue;
   }
 
   &__item {
