--- a/src/pug/config/layout.pug
+++ b/src/pug/config/layout.pug
@@ -24,4 +24,4 @@ html(lang="ru")
       include ../../modules/footer/footer.pug
 
     block scripts
-      script(src='main.min.js')
+      script(src='js/main.min.js')
