--- a/src/modules/nav/_nav.scss
+++ b/src/modules/nav/_nav.scss
@@ -18,6 +18,7 @@
     position: relative;
     list-style-type: none;
     background-color: $blue;
+    box-shadow: inset 0 0 10px rgba($black, .2);
   }
 
   &__item {
