add hero for mobile

--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -36,9 +36,15 @@ body {
 
 
 .wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
   font-size: 1.6rem;
   display: flex;
   flex-direction: column;
+  
+  @media (min-width: 1200px) {
+    box-shadow: 0 0 10px rgba($black, .2);
+  }
 }
 
 .content {
