--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,3 +9,4 @@ block links
   link(href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet")
 
 block content
+  include ../modules/intro/intro
