--- a/src/modules/intro/intro.pug
+++ b/src/modules/intro/intro.pug
@@ -1,6 +1,6 @@
-section.intro
-  h2.visually-hidden Добро пожаловать в ущелье!
-  .container.intro__inner
+.intro
+  section.intro__top.intro__inner.container
+    h2.visually-hidden Добро пожаловать в ущелье!
 
     .intro__box.intro__box_first
       svg(role='text').intro__text-svg.intro__text-svg_first
@@ -20,3 +20,6 @@ section.intro
       svg(viewBox="0 0 293.826 79.393", role='text').intro__text-svg.intro__text-svg_last
         title Because the Grand Canyon
         use(xlink:href='#text-becausecanyon')
+  section.intro__bottom.intro__inner.container
+    h2.h-lvl-2.intro__title Cедона&nbsp;&mdash; небольшой городок в&nbsp;аризоне, заслуживающий большего!
+    p.intro__desc
