--- a/src/styles/config/_global.scss
+++ b/src/styles/config/_global.scss
@@ -1,3 +1,5 @@
+.tac { text-align: center }
+
 .container {
   padding-left: 32px;
   padding-right: 32px;
@@ -6,4 +8,23 @@
 .h-lvl-2 {
   font-size: rem(18px);
   font-weight: 700;
+}
+
+.title {
+
+}
+
+.desc {
+  
+}
+
+.numb {
+  position: relative;
+  display: inline-block;
+  font-size: rem(14px);
+
+  &::before,
+  &::after {
+    content: '\2014'
+  }
 }
