--- a/src/modules/intro/intro.pug
+++ b/src/modules/intro/intro.pug
@@ -3,11 +3,11 @@
     h2.visually-hidden Добро пожаловать в ущелье!
 
     .intro__box.intro__box_first
-      svg(role='text').intro__text-svg.intro__text-svg_first
+      svg(viewBox="0 0 187.663 44.918", role='text').intro__text-svg.intro__text-svg_first
         title Welcome
         use(xlink:href='#text-welcome')
 
-      svg(role='text').intro__text-svg.intro__text-svg_second
+      svg(viewBox="0 0 255.917 28.91", role='text').intro__text-svg.intro__text-svg_second
         title to the gorgeus
         use(xlink:href='#text-tothegorgeous')
 
@@ -22,4 +22,4 @@
         use(xlink:href='#text-becausecanyon')
   section.intro__bottom.intro__inner.container
     h2.h-lvl-2.intro__title Cедона&nbsp;&mdash; небольшой городок в&nbsp;аризоне, заслуживающий большего!
-    p.intro__desc
+    p.intro__desc Рассмотрим 5&nbsp;причин, по&nbsp;которым Седона круче чем гранд каньон!
