add feature for mobile

--- a/src/modules/_modules.scss
+++ b/src/modules/_modules.scss
@@ -3,4 +3,5 @@
 @import 'main-nav/main-nav';
 @import 'intro/intro';
 @import 'reason/reason';
+@import 'feature/feature';
 @import 'footer/footer';
