--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,4 +12,5 @@ block links
 block content
   include ../modules/intro/intro
   include ../modules/reason/reason
+  include ../modules/feature/feature
   include ../modules/reason/reason-second
