--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -14,3 +14,4 @@ block content
   include ../modules/reason/reason
   include ../modules/feature/feature
   include ../modules/reason/reason-second
+  include ../modules/reason/reason-third
