--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -6,7 +6,9 @@ html {
   box-sizing: border-box;
 }
 
-*, *::before, *::after {
+*, 
+*::before,
+*::after {
   padding: 0;
   margin: 0;
   box-sizing: inherit;
@@ -17,6 +19,15 @@ body {
   font-size: 1rem;
   line-height: 1.4;
   text-rendering: optimizeSpeed;
+
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  
+  @media (min-width: 1200px) {
+    box-shadow: 0 0 10px rgba($black, .2);
+  }
 }
 
 .visually-hidden:not(:focus):not(:active) {
@@ -35,17 +46,6 @@ body {
   overflow: hidden;
 }
 
-
-.wrapper {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  
-  @media (min-width: 1200px) {
-    box-shadow: 0 0 10px rgba($black, .2);
-  }
-}
 
 .content {
   flex: 1 0 auto;
