--- a/src/pug/config/layout.pug
+++ b/src/pug/config/layout.pug
@@ -8,7 +8,9 @@ html(lang="ru")
     title #{title}
     block links
       link(rel="stylesheet", href="css/main.min.css")
-  body
+      link(rel="preconnect" href="https://fonts.gstatic.com")
+      link(href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,700;1,400&display=swap" rel="stylesheet")
+  body.body
     .visually-hidden
       //- include sprite svg icons
       include svg.pug
