--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,3 +15,4 @@ block content
   include ../modules/feature/feature
   include ../modules/reason/reason-second
   include ../modules/reason/reason-third
+  include ../modules/hotels/hotels
