--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -14,7 +14,7 @@ html {
   box-sizing: inherit;
 }
 
-body {
+.body {
   font-family: 'PT Sans', -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;
   font-size: 1rem;
   line-height: 1.4;
